# flow-language

./: .gitignore  DIFF-MANIFEST.json  README.md  example-plugin.json  index.html  package-lock.json  package.json
examples/: SAMPLE-INDEX.md  audio-fft-while-key.flsc  phase2-3-lazy-iterator.flsc  phase2-4-coroutine.flsc  phase2-4-promise-all.flsc  phase3-aes-gcm.flsc  phase3-http-request.flsc  phase3-sqlite-create.flsc  phase3-stream-processing.flsc  phase4-gui-designer.flsc
marketplace/: index.json
plugins/: audio-fft-test.json  audio-input-test.json  gui-window-test.json  test-math-plugin.json  test-modules-plugin.json
plugins/database/: README.md  mysql-load.json  mysql_adapter.cpp  postgresql-load.json  postgresql_adapter.rs
plugins/gpu/: README.md  cuda_adapter.cu  gpu-compute-test.json  opencl_adapter.cpp
plugins/loaders/: JavaTest.java  README.md  c-load.json  c_test.c  cpp-load.json  cpp_test.cpp  csharp-load.json  java-load.json  lua-load.json  lua_test.lua  python-load.json  python_test.py  (+2 more)
sdk/: README.md
src/: App.tsx  ContextMenu.tsx  DebuggerPanel.tsx  FlowNode.tsx  GroupNode.tsx  GuiDesignerPanel.tsx  NodeDocsPanel.tsx  PluginManagerPanel.tsx  ProfilerPanel.tsx  graph.ts  graphExecutor.ts  main.tsx  nodeDefinitions.ts  pluginModules.ts  pluginRuntime.ts  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  flow_phase3.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/language/: compiler.rs  error.rs  executor.rs  graph.rs  mod.rs  value.rs
tools/: generate-node-docs.mjs
(+9 files in other folders)
