[package]
name = "flow-language"
version = "0.13.0"
description = "A node based programming language"
authors = ["you"]
edition = "2021"

[lib]
name = "flow_language_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.8"
thiserror = "2"
evalexpr = "12"

base64 = "0.22"
tauri-plugin-fs = "2"

reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

rusqlite = { version = "0.32", features = ["bundled"] }
